Fix: Text align on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,11 +42,18 @@ li {
 
 
 @media only screen and (max-width: 520px) {
+	body p, body ul > li {
+		text-align: left;
+	}
+
+	.description p {
+		text-align: center;
+	}
+
 	.about .profile .description {
 		padding-left: 3rem !important;
 		padding-top: 5rem;
 	}
-
 }
 
 /**
